<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">konu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="s">Saat</string>
    <string name="a">Example-1</string>
    <string name="b">Example-2</string>
    <string name="c">Example-3</string>
    <string name="d">Example-4</string>
    <string name="e">Example-5</string>
    <string name="f">Example-6</string>
    <string name="g">Example-7</string>
    <string name="h">Example-8</string>
    <string name="z">Example-9</string>
    <string name="x">Example-10</string>
    <string name="q">Example-11</string>
    <string name="w">Example-12</string>
    <string name="done">Kapat</string>
    <string name="cancel">Iptal</string>
    <string name="clear">Temizle</string>
    <string name="ok">Tamam</string>
    <string name="title_activity_example2">Example2</string>
    <string name="title_activity_lay_main">LayMainActivity</string>

</resources>