<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    tools:context=".MainActivity" >
   <LinearLayout 
          android:layout_width="match_parent"
  		  android:layout_height="wrap_content"
    		android:orientation="horizontal" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
      />
     <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

</LinearLayout>
   
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ok" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName" />
    
    <Button
        android:id="@+id/butto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear" 
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    

</LinearLayout>